[package]
name = "cess_pois_rust"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bigdecimal = "0.3.1"
bytes = "1.4.0"
byteorder = "1.4.3"
hex = "0.4.3"
merkle_light = "0.4.0"
num-bigint-dig = "0.8.4"
num-integer = "0.1.45"
num-traits = "0.2.15"
prost = "0.11.9"
rand = "0.8.5"
rsa = "0.9.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
sha2 = "0.10.7"
lazy_static = "1.4.0"
